# mechfighter3000

./: .gitignore  CMakeLists.txt  README.md
app/core/: MechFighter.cpp
core/: CMakeLists.txt
core/game/: GameEventHandler.cpp  MechFighter.cpp
core/graphics/: renderer.cpp
core/util/: logging.h
game/: BattleSequence.cpp  BattleSequence.h  CMakeLists.txt  Enemy.cpp  Enemy.h  GameEventHandler.cpp  GameEventHandler.h  HeadFactory.cpp  HeadFactory.h  Input.h  Inventory.h  Items.h  LEVELS.json  MechFighter.cpp  Mech_Factory.cpp  Mech_Factory.h  PARTS.json  PartsFactory.cpp  PartsFactory.h  Player.cpp  Player.h  WEAPONS.json  WeaponFactory.cpp  WeaponFactory.h
glad/include/glad/: glad.h
glad/src/: glad.c
graphics/: Animation.cpp  Animation.h  BattleMenu.cpp  BattleMenu.h  CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  EnemyMenu.cpp  EnemyMenu.h  LightCube.cpp  LightCube.h  MechMenu.cpp  MechMenu.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlayerMechMenu.cpp  PlayerMechMenu.h  PopUpMenu.cpp  PopUpMenu.h  RenderList.h  Texture.cpp  Texture.h  VAO.h  VBO.cpp  VBO.h  renderer.cpp  renderer.h  shaderClass.cpp  shaderClass.h
graphics/assets/: spaceship_normal.ktx2
graphics/menu/: CMakeLists.txt  Settings.h  imguipp.cpp  imguipp.h
graphics/models/TestArea/: scene.gltf
graphics/models/TestCube/: scene.gltf
graphics/models/devcube/: scene.gltf
graphics/models/devmech/: scene.gltf
graphics/models/testmodel/: scene.gltf
graphics/shaders/: asteroid.vert  default.frag  default.vert  outlining.vert
imgui/: CMakeLists.txt
util/: CMakeLists.txt  Maths.h  NameGenerator.cpp  NameGenerator.h  enumFactory.h  logging.cpp  maths.cpp
