if( MSVC )
    SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ENTRY:mainCRTStartup" )
endif()

set ( GLFW-CMAKE-MECHFIGHTER-SRC ./game/MechFighter.cpp)

add_executable( MechFighter3000 WIN32 ${GLFW-CMAKE-MECHFIGHTER-SRC} ./graphics/renderer.cpp ./util/logging.cpp)
target_link_libraries( MechFighter3000 ${OPENGL_LIBRARIES} glfw )
if( MSVC )
    if( ${CMAKE_VERSION} VERSION_LESS "3.6.0" )
        message( "\n\t[ WARNING ]\n\n\tCMake version lower than 3.6.\n\n\t - Please update CMAKE and rerun; OR\n\t - Manually set 'GLFW-CMAKE-starter' as StartUp Project in Visual Studio.\n" )
    else()
        set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT GLFW-CMAKE-starter )
    endif()
endif()